--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       <label for="vestidos">Vestidos</label>
       <label for="camisas">Camisas</label>
       <label for="poleras">Poleras</label>
-      <label for="pantalones">Pantalones Elegantes</label>
+      <label for="pantalones">Pantalones Elegantes de Hombre</label>
     </nav>
   </header>
 
