Esta es la última prueba. Tengo que dormir

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <header class="header-top">
     <div class="logo-titulo">
       <img src="imagenes/L'Mon (Claro).jpg" alt="Logo L'mon" class="logo">
-      <h1>L’mon de ejemplo</h1>
+      <h1>L’mon</h1>
     </div>
     <nav class="menu">
       <label for="todo">Todo</label>
